--- a/iOSBootcamp-Final-Project/Module/DoctorList/View/Components/DoctorCardColViewCell.xib
+++ b/iOSBootcamp-Final-Project/Module/DoctorList/View/Components/DoctorCardColViewCell.xib
@@ -31,6 +31,7 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="x5L-ll-HCP">
                                         <rect key="frame" x="0.0" y="-0.5" width="22" height="20"/>
+                                        <color key="tintColor" red="0.94768363116967558" green="0.79267113292006997" blue="0.27744130308990361" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="4.7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYc-DB-nHg">
                                         <rect key="frame" x="24" y="0.0" width="75" height="20"/>
