--- a/iOSBootcamp-Final-Project/Module/Account/View/Components/ProfileTableCell.xib
+++ b/iOSBootcamp-Final-Project/Module/Account/View/Components/ProfileTableCell.xib
@@ -1,21 +1,169 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ProfileTableCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="173" id="KGk-i7-Jjw" customClass="ProfileTableCell" customModule="iOSBootcamp_Final_Project" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="173"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="173"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QRJ-Kj-Oqs">
+                        <rect key="frame" x="15" y="15" width="290" height="153"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="ApM-08-v7l">
+                                <rect key="frame" x="85" y="23" width="123" height="33"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fathya Ariyani" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Hu-j2-sy8">
+                                        <rect key="frame" x="0.0" y="0.0" width="93.5" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2001-08-24 • Perempuan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6dT-Gh-nEv">
+                                        <rect key="frame" x="0.0" y="21" width="123" height="12"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lbd-F5-aeT">
+                                <rect key="frame" x="249" y="23" width="26" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="1"/>
+                                <color key="tintColor" red="0.14547191719999999" green="0.22708217319999999" blue="0.51523428250000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="-5" minY="0.0" maxX="5" maxY="0.0"/>
+                                <state key="normal" image="chevron.right.circle.fill" catalog="system">
+                                    <color key="titleColor" red="0.2230732923" green="0.2766632617" blue="0.51523428250000003" alpha="0.0" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TYA-ze-x1A">
+                                <rect key="frame" x="20" y="81" width="250" height="0.5"/>
+                                <color key="backgroundColor" red="0.2230732923" green="0.2766632617" blue="0.51523428250000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="Az5-r6-kKO">
+                                <rect key="frame" x="20" y="96.5" width="242.5" height="32.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Rul-6Z-RRt">
+                                        <rect key="frame" x="0.0" y="0.0" width="49.5" height="32.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="54" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQj-se-F9B">
+                                                <rect key="frame" x="14" y="0.0" width="22" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Berat (kg)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZT-JB-lKK">
+                                                <rect key="frame" x="1" y="20.5" width="47.5" height="12"/>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="TZT-JB-lKK" firstAttribute="leading" secondItem="Rul-6Z-RRt" secondAttribute="leading" constant="1" id="G7t-nL-v2F"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="39r-Wc-vEn">
+                                        <rect key="frame" x="100.5" y="0.0" width="54.5" height="32.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="155" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vB8-BY-tmi">
+                                                <rect key="frame" x="12.5" y="0.0" width="29.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tinggi (cm)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dwh-To-TEt">
+                                                <rect key="frame" x="0.0" y="20.5" width="54.5" height="12"/>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="jqo-70-sHJ">
+                                        <rect key="frame" x="206" y="0.0" width="36.5" height="32.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fo0-iD-Nqc">
+                                                <rect key="frame" x="0.0" y="0.0" width="36.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BMI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdg-wY-KDx">
+                                                <rect key="frame" x="9.5" y="20.5" width="18" height="12"/>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dokter-proper" translatesAutoresizingMaskIntoConstraints="NO" id="YLb-63-YaW">
+                                <rect key="frame" x="16" y="8" width="65" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="Vhr-SW-Xko"/>
+                                    <constraint firstAttribute="height" constant="65" id="W0N-O9-JvS"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="YLb-63-YaW" firstAttribute="leading" secondItem="QRJ-Kj-Oqs" secondAttribute="leading" constant="16" id="0K8-0B-VRa"/>
+                            <constraint firstAttribute="trailing" secondItem="TYA-ze-x1A" secondAttribute="trailing" constant="20" id="0mq-yp-8cR"/>
+                            <constraint firstItem="Az5-r6-kKO" firstAttribute="leading" secondItem="QRJ-Kj-Oqs" secondAttribute="leading" constant="20" id="2NT-63-cmb"/>
+                            <constraint firstAttribute="trailing" secondItem="Az5-r6-kKO" secondAttribute="trailing" constant="27.5" id="A3P-E9-erE"/>
+                            <constraint firstAttribute="height" constant="153" id="ADQ-nY-vV0"/>
+                            <constraint firstAttribute="trailing" secondItem="lbd-F5-aeT" secondAttribute="trailing" constant="15" id="Qny-qz-lZL"/>
+                            <constraint firstItem="TYA-ze-x1A" firstAttribute="leading" secondItem="QRJ-Kj-Oqs" secondAttribute="leading" constant="20" id="RRK-7j-3jb"/>
+                            <constraint firstItem="lbd-F5-aeT" firstAttribute="top" secondItem="QRJ-Kj-Oqs" secondAttribute="top" constant="23" id="aGT-H5-g4Q"/>
+                            <constraint firstAttribute="bottom" secondItem="Az5-r6-kKO" secondAttribute="bottom" constant="24" id="dFq-tE-hb7"/>
+                            <constraint firstItem="YLb-63-YaW" firstAttribute="top" secondItem="QRJ-Kj-Oqs" secondAttribute="top" constant="8" id="gOK-Id-8Ve"/>
+                            <constraint firstItem="ApM-08-v7l" firstAttribute="top" secondItem="QRJ-Kj-Oqs" secondAttribute="top" constant="23" id="gR1-Il-UnP"/>
+                            <constraint firstItem="Az5-r6-kKO" firstAttribute="top" secondItem="TYA-ze-x1A" secondAttribute="bottom" constant="15" id="gsB-U2-mlY"/>
+                            <constraint firstItem="TYA-ze-x1A" firstAttribute="top" secondItem="YLb-63-YaW" secondAttribute="bottom" constant="8" symbolic="YES" id="lQ5-Jm-lmm"/>
+                            <constraint firstItem="ApM-08-v7l" firstAttribute="leading" secondItem="YLb-63-YaW" secondAttribute="trailing" constant="4" id="ox6-5k-4bk"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="QRJ-Kj-Oqs" secondAttribute="bottom" constant="5" id="4rW-mk-976"/>
+                    <constraint firstAttribute="trailing" secondItem="QRJ-Kj-Oqs" secondAttribute="trailing" constant="15" id="9qJ-Tb-NCj"/>
+                    <constraint firstItem="QRJ-Kj-Oqs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="db4-mu-HkT"/>
+                    <constraint firstItem="QRJ-Kj-Oqs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="qBx-6s-iPT"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="bmiLabel" destination="Fo0-iD-Nqc" id="fWw-Dd-cO5"/>
+                <outlet property="editProfileButton" destination="lbd-F5-aeT" id="fvX-5w-5hV"/>
+                <outlet property="heightLabel" destination="vB8-BY-tmi" id="hfe-Dh-ABr"/>
+                <outlet property="infoLabel" destination="6dT-Gh-nEv" id="nRe-Qk-DV2"/>
+                <outlet property="nameLabel" destination="0Hu-j2-sy8" id="SWl-VP-IuJ"/>
+                <outlet property="profileImage" destination="YLb-63-YaW" id="eaY-rY-i7x"/>
+                <outlet property="profileView" destination="QRJ-Kj-Oqs" id="83F-FU-cGR"/>
+                <outlet property="weightLabel" destination="qQj-se-F9B" id="utF-7Z-kKV"/>
+            </connections>
+            <point key="canvasLocation" x="131.8840579710145" y="128.90625"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="chevron.right.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="dokter-proper" width="438" height="400"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
