--- a/iOSBootcamp-Final-Project/Module/Home/View/Components/TreatmentCategoryCell/ReusableColCell/TreatmentCategoryColCell.xib
+++ b/iOSBootcamp-Final-Project/Module/Home/View/Components/TreatmentCategoryCell/ReusableColCell/TreatmentCategoryColCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -28,13 +29,13 @@
                                 <rect key="frame" x="0.0" y="140" width="180" height="72"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Keram perut saat haid" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rc5-IS-mN6">
-                                        <rect key="frame" x="8" y="10" width="107" height="31.5"/>
+                                        <rect key="frame" x="10" y="5" width="105" height="31.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Konsultasi ke spesialis kebidanan" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uff-yF-eNy">
-                                        <rect key="frame" x="8" y="41.5" width="167" height="10.5"/>
+                                        <rect key="frame" x="10" y="39.5" width="165" height="12"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -42,18 +43,18 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="Uff-yF-eNy" secondAttribute="bottom" constant="20" id="6vE-LC-ZQ6"/>
-                                    <constraint firstItem="Rc5-IS-mN6" firstAttribute="leading" secondItem="L2o-0l-fZo" secondAttribute="leading" constant="8" id="B6e-XU-9vh"/>
-                                    <constraint firstItem="Rc5-IS-mN6" firstAttribute="top" secondItem="L2o-0l-fZo" secondAttribute="top" constant="10" id="Bjc-NX-Xqd"/>
-                                    <constraint firstItem="Uff-yF-eNy" firstAttribute="top" secondItem="Rc5-IS-mN6" secondAttribute="bottom" id="DCy-EJ-me7"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Uff-yF-eNy" secondAttribute="bottom" constant="10" id="6vE-LC-ZQ6"/>
+                                    <constraint firstItem="Rc5-IS-mN6" firstAttribute="leading" secondItem="L2o-0l-fZo" secondAttribute="leading" constant="10" id="B6e-XU-9vh"/>
+                                    <constraint firstItem="Rc5-IS-mN6" firstAttribute="top" secondItem="L2o-0l-fZo" secondAttribute="top" constant="5" id="Bjc-NX-Xqd"/>
+                                    <constraint firstItem="Uff-yF-eNy" firstAttribute="top" secondItem="Rc5-IS-mN6" secondAttribute="bottom" constant="3" id="DCy-EJ-me7"/>
                                     <constraint firstAttribute="trailing" secondItem="Rc5-IS-mN6" secondAttribute="trailing" constant="65" id="bY7-OV-gvL"/>
-                                    <constraint firstItem="Uff-yF-eNy" firstAttribute="leading" secondItem="L2o-0l-fZo" secondAttribute="leading" constant="8" id="mLS-Jd-uts"/>
+                                    <constraint firstItem="Uff-yF-eNy" firstAttribute="leading" secondItem="L2o-0l-fZo" secondAttribute="leading" constant="10" id="mLS-Jd-uts"/>
                                     <constraint firstAttribute="trailing" secondItem="Uff-yF-eNy" secondAttribute="trailing" constant="5" id="s7j-pv-JDT"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hwt-nA-lbs">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hwt-nA-lbs">
                                 <rect key="frame" x="120" y="125.5" width="45" height="44"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <color key="backgroundColor" name="theme-color"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="45" id="0OL-IX-2L0"/>
@@ -97,13 +98,13 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="book.circle" catalog="system" width="128" height="121"/>
+        <image name="circle" catalog="system" width="128" height="121"/>
         <image name="sakit-perut" width="180" height="162"/>
+        <namedColor name="theme-color">
+            <color red="1" green="0.68199998140335083" blue="0.66699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
