added json for api in rtf file

--- a/iOSBootcamp-Final-Project/Module/DoctorList/View/Components/DoctorCardColViewCell.xib
+++ b/iOSBootcamp-Final-Project/Module/DoctorList/View/Components/DoctorCardColViewCell.xib
@@ -42,7 +42,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Online" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AUp-Mn-nTc">
                                         <rect key="frame" x="101" y="0.0" width="39" height="20"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.40039344432021856" green="0.77637456884287825" blue="0.41141896600127092" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
